--- a/paginaVisitada.html
+++ b/paginaVisitada.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html; charset="UTF-8">
 <link rel="styleSheet" type="text/css" href="paginaVisitada.css">
-<title>JavaScript</title>
+<title>Pagina visitada</title>
 <script type="text/JavaScript">
 	var i=0, visitadas=0, teletubies='http://pbskids.org/teletubbies';
 	var enlaces=new Array();
