--- a/ingresarEmpleado.html
+++ b/ingresarEmpleado.html
@@ -8,12 +8,12 @@
 	function ingresar()
 	{
 		var dato;
-		/*dato=prompt('Ingrese el nombre del empleado: ','');
+		dato=prompt('Ingrese el nombre del empleado: ','');
 		empleado[0]=dato;
 		dato=prompt('Ingrese los apellidos del empleado: ','');
 		empleado[1]=dato;
 		dato=prompt('Ingrese la identificacion del empleado: ','');
-		empleado[2]=dato;*/
+		empleado[2]=dato;
 		dato=prompt('Ingrese la fecha de nacimiento del empleado: ','');
 		empleado[3]=dato;
 		dato=prompt('Ingrese el salario del empleado: ','');
